# LinkSnap

./: .flake8  README.md  env_example  main.py  openapi.yml  pyproject.toml  pytest.ini  settings.py
linksnap/: models.py  views.py
linksnap/templates/: 500.html  base.html  footer.html  main.html
postman_collection/: README.md  Yacut.postman_collection.json  set_up_data.sh
tests/: conftest.py  test_database.py  test_endpoints.py  test_views.py
yacut/: __init__.py  api_views.py  error_handlers.py  forms.py  models.py  views.py
yacut/templates/: 404.html  base.html  main.html
